-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
Windows 7 + Qt4.8.2 + VS2010
-
qtbase/d1e950b919615c1ae754e07899f1b45303c17654 qt/d75e9ba08ae0e2c71812c0e5b157a2f93c8eedfd
The attached example dll demonstrates the use case.
Test steps:
• On command prompt run qmake -tp vc
--> note the mydll.pro content i.e. it specifies a TARGET_EXT and DLLDESTRIR:
TARGET = MyDLL
TEMPLATE = lib
TARGET_EXT = .tsdll
CONFIG += dll
DLLDESTDIR = ../lib
DEFINES += MYDLL_LIBRARY
SOURCES += mydll.cpp
HEADERS += mydll.h\
MyDLL_global.h
• Open the generated .vcxproj file with Visual Studio 2010.
• Select 'build' for the project
Error: Coping the generated MyDLL.tsdll to ..\lib fails even if MyDLL.tsdll is generated to \debug folder:
1> Description: Copy MyDLL.tsdll to ..\lib 1> The system cannot find the file specified. 1>C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\Microsoft.CppCommon.targets(113,5): error MSB3073: The command "copy "D:\example\debug\MyDLL.dll" "..\lib" 1>C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\Microsoft.CppCommon.targets(113,5): error MSB3073: :VCEnd" exited with code 1.
When you modify the target extension property (Properties - Configuration properties - General - Target extension; please see the attachment) on Visual studio so that it includes '.tsdll' instead of '.dll' the MyDLL.tsdll is properly copied into the defined targed directory (..\lib).
- relates to
-
QTBUG-29286 VERSION variable in .pro file causes incorrect linking in MSVC2010 projects
-
- Closed
-