qmake vcxproj generator: map TARGET_EXT to $(TargetExt)

Task-number: QTBUG-26782

Change-Id: Ib143fa6b8674c4d09d798a9301bb209b886e791d
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@nokia.com>

cregit: e81d7fd1e57fe2ce11cbe07636f890973116f7ab https://github.com/qt/qtbase/commit/e81d7fd1e57fe2ce11cbe07636f890973116f7ab