qmake/generators/win32/msvc_objectmodel.h
@@ -2771,6 +2771,9 @@ name|QString
 name|PrimaryOutput
 decl_stmt|;
 name|QString
+name|PrimaryOutputExtension
+decl_stmt|;
+name|QString
 name|ProgramDatabase
 decl_stmt|;
 name|triState
